--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react_article",
-  "homepage": "react_article",
+  "name": "react_person",
+  "homepage": "react_person",
   "version": "0.1.0",
   "keywords": [],
   "author": "Mate Academy",
